--- a/chamber/Discover.html
+++ b/chamber/Discover.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD231 - Web Frontend Development I - Quadri Kolawole</title>
-    <meta name="description" content="Directory page">
+    <meta name="description" content="Disover page">
     <meta name="author" content="Quadri Kolawole">
-    <meta property="og:title" content="Directory page">
+    <meta property="og:title" content="Discover page">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Directory page for chamber of commerce ">
+    <meta property="og:description" content="Discover page for chamber of commerce ">
     <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
     <meta property="og:image" content = "https://adiquatech.github.io/wdd231/images/place.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
