--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -17,8 +17,10 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/thankyou.css">
     <script src="scripts/script.js" defer></script>
     <script src="scripts/join.js" defer></script>
+    <script src="scripts/thanks.js" defer></script>
 
 </head>
 <body>
@@ -43,7 +45,7 @@
         </div>
 
     <main>
-        <h1>Chamber of Commerce</h1>
+        <h1>Welcome to Chamber of Commerce</h1>
 
         <div id="results"></div>
     </main>
