--- a/chamber/Discover.html
+++ b/chamber/Discover.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="Discover page for chamber of commerce ">
     <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
-    <meta property="og:image" content = "https://adiquatech.github.io/wdd231/images/place.webp">
+    <meta property="og:image" content="https://adiquatech.github.io/wdd231/chamber/images/web-og.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
