--- a/chamber/join.html
+++ b/chamber/join.html
@@ -49,7 +49,7 @@
             <div id="form-section">
                 <h1>Member Application Form</h1>
 
-                <form method="GET" action="thanks.html" class="designOne">
+                <form method="GET" action="thankyou.html" class="designOne">
                     <label>First Name <input type="text" name="first" 
                         required autocomplete="given-name" title="Your First Name"></label>
 
