new system push

--- a/chamber/Discover.html
+++ b/chamber/Discover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD231 - Web Frontend Development I - Quadri Kolawole</title>
-    <meta name="description" content="Disover page">
+    <meta name="description" content="Discover page">
     <meta name="author" content="Quadri Kolawole">
     <meta property="og:title" content="Discover page">
     <meta property="og:type" content="website">
@@ -17,14 +17,16 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/discover.css">
     <script src="scripts/script.js" defer></script>
+    <script src="scripts/discover.js" defer></script>
 </head>
 <body>
     <header>
         <section class="autor">
             <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
             <h1 class="name">Quadri K. Adisa</h1>
-            <p>Chambr of Commerce</p>
+            <p>Chamber of Commerce</p>
             <button id="hamburger">&#9776;</button>
         </section>
     </header>
@@ -42,7 +44,8 @@
         </div>
 
     <main>
-        <h1>Page-four</h1>
+        <h1></h1>
+        
     </main>
 
     <footer>
