--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -28,7 +28,7 @@
         <section class="autor">
             <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
             <h1 class="name">Quadri K. Adisa</h1>
-            <p>Chambr of Commerce</p>
+            <p>Chamber of Commerce</p>
             <button id="hamburger">&#9776;</button>
         </section>
     </header>
