project site plan

--- a/chamber/Discover.html
+++ b/chamber/Discover.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <!-- <link rel="stylesheet" href="styles/style.css"> -->
     <link rel="stylesheet" href="styles/discover.css">
     <script src="scripts/script.js" defer></script>
     <script src="scripts/discover.js" defer></script>
@@ -44,7 +44,43 @@
         </div>
 
     <main>
-        <h1></h1>
+<div class="discover-page">
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Discover New Content</h1>
+    <p>Explore the latest and most popular resources</p>
+    <button class="cta">Get Started</button>
+  </section>
+
+  <!-- Featured Section -->
+  <section class="featured-content">
+    <h2>Trending Now</h2>
+    <div class="featured-items">
+      <!-- Featured Item 1 -->
+      <div class="featured-item">
+        <img src="featured1.jpg" alt="Featured Image">
+        <h3>Title of the Content</h3>
+        <p>Short description about the content</p>
+      </div>
+      <!-- Featured Item 2 -->
+      <div class="featured-item">
+        <img src="featured2.jpg" alt="Featured Image">
+        <h3>Title of the Content</h3>
+        <p>Short description about the content</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Categories Section -->
+  <section class="categories">
+    <h2>Explore Categories</h2>
+    <ul>
+      <li><a href="#">Category 1</a></li>
+      <li><a href="#">Category 2</a></li>
+      <li><a href="#">Category 3</a></li>
+    </ul>
+  </section>
+</div>
         
     </main>
 
