--- a/chamber/Discover.html
+++ b/chamber/Discover.html
@@ -16,10 +16,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
-    <!-- <link rel="stylesheet" href="styles/style.css"> -->
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/discover.css">
     <script src="scripts/script.js" defer></script>
-    <script src="scripts/discover.js" defer></script>
+    <!-- <script src="scripts/discover.js" defer></script> -->
 </head>
 <body>
     <header>
@@ -43,45 +43,36 @@
             </nav>
         </div>
 
-    <main>
-<div class="discover-page">
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>Discover New Content</h1>
-    <p>Explore the latest and most popular resources</p>
-    <button class="cta">Get Started</button>
-  </section>
+    <main id="discover-main">
+      <section id="sidebar">
+        <div id="nationality">
+          <h2>Nationality</h2>
+          <h3>Nigeria Key National Information</h3>
+          <ul>
+            <li>Population: Approximately 225 million</li>
+            <li>Land Mass: Approximately 923,769 square kilometer</li>
+            <li>Unemployment rate: 30%</li>
+            <li>Number of States: 37 including FCT</li>
+          </ul>
+        </div>
 
-  <!-- Featured Section -->
-  <section class="featured-content">
-    <h2>Trending Now</h2>
-    <div class="featured-items">
-      <!-- Featured Item 1 -->
-      <div class="featured-item">
-        <img src="featured1.jpg" alt="Featured Image">
-        <h3>Title of the Content</h3>
-        <p>Short description about the content</p>
-      </div>
-      <!-- Featured Item 2 -->
-      <div class="featured-item">
-        <img src="featured2.jpg" alt="Featured Image">
-        <h3>Title of the Content</h3>
-        <p>Short description about the content</p>
-      </div>
-    </div>
-  </section>
+        <div id="city">
+          <h2>City</h2>
+          <img src="../images/place.webp" alt="city image" width="200" height="133">
+          <h3>Ibadan City</h3>
+          <p>Ibadan is the capital city of Oyo State, Nigeria, and one of the largest cities in Africa by land area. Historically, it was a key city in the Yoruba Empire and became an important center for administration during British colonial rule.</p>
+        </div>
 
-  <!-- Categories Section -->
-  <section class="categories">
-    <h2>Explore Categories</h2>
-    <ul>
-      <li><a href="#">Category 1</a></li>
-      <li><a href="#">Category 2</a></li>
-      <li><a href="#">Category 3</a></li>
-    </ul>
-  </section>
-</div>
-        
+        <div id="calender">
+          <h2>Calender</h2>
+          <p></p>
+        </div>
+      </section>
+
+      <section id="about-pic">
+        <img src="images/directory/nationality.webp" alt="Nationality image" width="500" height="500">
+      </section>
+      
     </main>
 
     <footer>
