--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -37,7 +37,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li class="current-menu-item"><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="Discover.html">Discover</a></li>
+                    <li><a href="discover.html">Discover</a></li>
                     <li><a href="../index.html">Profile</a></li>
                 </ul>
             </nav>
