--- a/chamber/join.html
+++ b/chamber/join.html
@@ -36,7 +36,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="Discover.html">Discover</a></li>
+                    <li><a href="discover.html">Discover</a></li>
                     <li><a href="../index.html">Profile</a></li>
                 </ul>
             </nav>
