--- a/chamber/Discover.html
+++ b/chamber/Discover.html
@@ -40,7 +40,7 @@
                 </ul>
             </nav>
         </div>
-
+<!-- why am i having this error -->
     <main id="discover-main">
       <section id="sidebar">
         <div id="nationality">
