--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -55,7 +55,7 @@
 
         <div id="city">
           <h2>City</h2>
-          <img src="../images/place.webp" alt="city image" width="200" height="133">
+          <img src="../images/place.webp" alt="city image" width="200" height="133" loading="lazy">
           <h3>Ibadan City</h3>
           <p>Ibadan is the capital city of Oyo State, Nigeria, and one of the largest cities in Africa by land area. Historically, it was a key city in the Yoruba Empire and became an important center for administration during British colonial rule.</p>
         </div>
@@ -67,7 +67,7 @@
       </section>
 
       <section id="about-pic">
-        <img src="images/directory/Nigeria.webp" alt="Nationality image" width="500" height="500">
+        <img src="images/directory/Nigeria.webp" alt="Nationality image" width="500" height="500" loading="lazy">
       </section>
     </main>
 
