--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <section class="autor">
-            <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
+            <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa" loading="lazy">
             <h1 class="name">Quadri K. Adisa</h1>
             <p>Chamber of Commerce</p>
             <button id="hamburger">&#9776;</button>
@@ -79,9 +79,9 @@
                 <p>Ibadan, Oyo State, Nigeria</p>
             </div>
             <div class="social-media">
-                <a href="#"><img src="images/icons/youtube.png" alt="Youtube" width="30" height="30"></a>
-                <a href="#"><img src="images/icons/twitter.png" alt="Twitter" width="30" height="30"></a>
-                <a href="#"><img src="images/icons/linkedin.png" alt="Instagram" width="30" height="30"></a>
+                <a href="#"><img src="images/icons/youtube.png" alt="Youtube" width="30" height="30" loading="lazy"></a>
+                <a href="#"><img src="images/icons/twitter.png" alt="Twitter" width="30" height="30" loading="lazy"></a>
+                <a href="#"><img src="images/icons/linkedin.png" alt="Instagram" width="30" height="30" loading="lazy"></a>
             </div>
             <div class="developer">
                 <p>WDD231 Class Project</p>
