--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
+    <script src="scripts/discover.js" defer></script>
 </head>
 <body>
     <header>
@@ -42,6 +43,11 @@
         </div>
     <main id="discover-main">
       <section id="sidebar">
+        <div id="event">
+          <h2>Visitor Info</h2>
+          <p id="lastVisitMessage"></p>
+        </div>
+
         <div id="nationality">
           <h2>Nationality</h2>
           <h3>Nigeria Key National Information</h3>
@@ -60,14 +66,40 @@
           <p>Ibadan is the capital city of Oyo State, Nigeria, and one of the largest cities in Africa by land area. Historically, it was a key city in the Yoruba Empire and became an important center for administration during British colonial rule.</p>
         </div>
 
-        <div id="calender">
-          <h2>Calender</h2>
-          <p></p>
-        </div>
       </section>
 
-      <section id="about-pic">
-        <img src="images/directory/Nigeria.webp" alt="Nationality image" width="500" height="500" loading="lazy">
+      <section id="discover-site">
+
+        <div class="site-container">
+          <img src="images/directory/agodi-gardens.webp" alt="agodi-gardens image"  loading="lazy">
+          <h2>Agodi Gardens Ibadan</h2>
+        </div>
+
+        <div class="site-container">
+          <img src="images/directory/bowers-tower.webp" alt="bowers tower image" loading="lazy">
+          <h2>Bowers Tower Ibadan</h2>
+        </div>
+
+        <div class="site-container">
+          <img src="images/directory/cocoa_house.webp" alt="cocoa house image" loading="lazy">
+          <h2>cocoa House Ibadan</h2>
+        </div>
+
+        <div class="site-container">
+          <img src="images/directory/iart.webp" alt="Institute of Agricultural Research Training image" loading="lazy">
+          <h2>Institute of Agricultural Research Training</h2>
+        </div>
+
+        <div class="site-container">
+          <img src="images/directory/iita.webp" alt="International Institute of Tropical Agriculture image" loading="lazy">
+          <h2>International Institute of Tropical Agriculture</h2>
+        </div>
+
+        <div class="site-container">
+          <img src="images/directory/mapo-hall1.webp" alt="Mapo Hall image" loading="lazy">
+          <h2>Mapo Hall</h2>
+        </div>
+        
       </section>
     </main>
 
@@ -79,9 +111,9 @@
                 <p>Ibadan, Oyo State, Nigeria</p>
             </div>
             <div class="social-media">
-                <a href="#"><img src="images/icons/youtube.png" alt="Youtube" width="30" height="30" loading="lazy"></a>
-                <a href="#"><img src="images/icons/twitter.png" alt="Twitter" width="30" height="30" loading="lazy"></a>
-                <a href="#"><img src="images/icons/linkedin.png" alt="Instagram" width="30" height="30" loading="lazy"></a>
+                <a href="#"><img src="images/icons/youtube.png" alt="Youtube" width="30" height="30"></a>
+                <a href="#"><img src="images/icons/twitter.png" alt="Twitter" width="30" height="30"></a>
+                <a href="#"><img src="images/icons/linkedin.png" alt="Instagram" width="30" height="30"></a>
             </div>
             <div class="developer">
                 <p>WDD231 Class Project</p>
