--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -87,17 +87,17 @@
 
         <div class="site-container">
           <img src="images/directory/iart.webp" alt="Institute of Agricultural Research Training image" loading="lazy">
-          <h2>Institute of Agricultural Research Training</h2>
+          <h2>Institute of Agricultural Research Training Ibadan</h2>
         </div>
 
         <div class="site-container">
           <img src="images/directory/iita.webp" alt="International Institute of Tropical Agriculture image" loading="lazy">
-          <h2>International Institute of Tropical Agriculture</h2>
+          <h2>International Institute of Tropical Agriculture Ibadan</h2>
         </div>
 
         <div class="site-container">
           <img src="images/directory/mapo-hall1.webp" alt="Mapo Hall image" loading="lazy">
-          <h2>Mapo Hall</h2>
+          <h2>Mapo Hall Ibadan</h2>
         </div>
         
       </section>
