--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="chamber/index.html">Chamber</a></li>
                     <li><a href="GitHub.html">GitHub Profile</a></li>
-                    <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/quadri-k" target="_blank" rel="noopener">LinkedIn</a></li>
+                    <li><a href="project/index.html">Project</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
     <main>
         <section id = "section">
             <div class="course-work">
