--- a/project/index.html
+++ b/project/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Quadri Kolawole">
     <meta property="og:title" content="Home page">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Home page for chamber of commerce ">
+    <meta property="og:description" content="Agricultural product Sales website Home page">
     <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
     <meta property="og:image" content="https://adiquatech.github.io/wdd231/chamber/images/web-og.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +17,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/home.css">
     <script src="scripts/script.js" defer></script>
     
 </head>
@@ -33,7 +34,7 @@
         <nav id="navigation">
             <ul class="navLinks">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="products.html.html">Directory</a></li>
+                <li><a href="products.html.html">Products</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="Discover.html">Discover</a></li>
                 <li><a href="../index.html">Profile</a></li>
@@ -42,8 +43,41 @@
     </div>
 
     <main>
+        <section class="hero">
+            <img src="images/hero-desktop.webp" alt="Hero">
+            <div class="hero-content">
+                <h1>Welcome to Our Agricultural Product Store</h1>
+                <p>Your one-stop shop for the best Agricultural products</p>
+                <a href="products.html" class="cta-button">Products</a>
+            </div>
+    </section>
+
+        <h2 class="feature">Featured Products</h2>
+        <div class="container">
+            <div class="product">
+                <img src="images/products/product_1.jpg" alt="Product 1">
+                <h2>Sunphosate 360SL (Glyphosate Herbicide | 1L)</h2>
+                 <p class="price">₦6,500.00</p>
+            </div>
+            <div class="product">
+                <img src="images/products/product_2.jpg" alt="Product 2">
+                <h2>Precision Seed and Fertilizer Planter</h2>
+               <p class="price">₦165,000.00</p>
+            </div>
+            <div class="product">
+                <img src="images/products/product_3.jpg" alt="Product 3">
+                <h2>High Quality Knapsack Sprayer (Various Brands) 16 Litres</h2>
+                <p class="price">₦23,000.00</p>
+            </div>
+            <div class="product">
+                <img src="images/products/product_4.jpg" alt="Product 4">
+                <h2>ButaForce ®(Pre-Emergence | Selective | Systemic Herbicide)</h2>
+                <p>Description</p>
+                <p class="price">₦8,000.00</p>
+            </div>
+        </div>
        
-      </main>
+    </main>
 
     <footer>
         <div class="footer-container">
