--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://adiquatech.github.io/wdd231/chamber/images/web-og.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Verdana&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -55,24 +55,23 @@
         <h2 class="feature">Featured Products</h2>
         <div class="container">
             <div class="product">
-                <img src="images/products/product_1.jpg" alt="Product 1">
+                <img src="images/products/product_1.webp" alt="Product 1">
                 <h2>Sunphosate 360SL (Glyphosate Herbicide | 1L)</h2>
                  <p class="price">₦6,500.00</p>
             </div>
             <div class="product">
-                <img src="images/products/product_2.jpg" alt="Product 2">
+                <img src="images/products/product_2.webp" alt="Product 2">
                 <h2>Precision Seed and Fertilizer Planter</h2>
                <p class="price">₦165,000.00</p>
             </div>
             <div class="product">
-                <img src="images/products/product_3.jpg" alt="Product 3">
+                <img src="images/products/product_3.webp" alt="Product 3">
                 <h2>High Quality Knapsack Sprayer (Various Brands) 16 Litres</h2>
                 <p class="price">₦23,000.00</p>
             </div>
             <div class="product">
-                <img src="images/products/product_4.jpg" alt="Product 4">
+                <img src="images/products/product_4.webp" alt="Product 4">
                 <h2>ButaForce ®(Pre-Emergence | Selective | Systemic Herbicide)</h2>
-                <p>Description</p>
                 <p class="price">₦8,000.00</p>
             </div>
         </div>
