--- a/project/index.html
+++ b/project/index.html
@@ -35,7 +35,7 @@
             <ul class="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="join.html">Join</a></li>
+                <li><a href="form.html">Products Review</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="../index.html">Profile</a></li>
             </ul>
@@ -44,7 +44,7 @@
 
     <main>
         <section class="hero">
-            <img src="images/hero-desktop.webp" alt="Hero">
+            <img src="images/hero-desktop.webp" alt="Hero" width="1792" height="1024" loading="lazy">
             <div class="hero-content">
                 <h1>Welcome to Our Agricultural Product Store</h1>
                 <p>Your one-stop shop for the best Agricultural products</p>
