--- a/project/products.html
+++ b/project/products.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/produts.css">
     <script src="scripts/script.js" defer></script>
-    <script src="scripts/products.js" defer></script>
 </head>
 
 <body>
@@ -36,7 +35,7 @@
             <ul class="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="join.html">Join</a></li>
+                <li><a href="form.html">Products Review</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="../index.html">Profile</a></li>
             </ul>
@@ -120,7 +119,7 @@
                 <p class="price">₦7,500.00</p>
             </div>
         </div>
-           
+
     </main>
 
     <footer>
