--- a/project/form.html
+++ b/project/form.html
@@ -63,10 +63,10 @@
                 <input type="radio" id="onestar" name="rating" value="1" required><label for="onestar"></label>
               </div>
             </div>
-            <!-- Date of installation -->
+            <!-- Date of Usage -->
             <div class="form-control">
-              <label for="dateOfInstallation">Date of installation</label>
-              <input type="date" name="dateOfInstallation" id="dateOfInstallation">
+              <label for="dateOfUsage">Date of Usage</label>
+              <input type="date" name="dateOfUsage" id="dateOfUsage">
             </div>
             <!-- Checkbox -->
             <fieldset class="form-control">
@@ -76,7 +76,7 @@
                 <label for="durability">Durability</label>
               </div>
               <div>
-                <input type="checkbox" id="easeOfUse" name="features" value="easeOfUse">
+                <input type="checkbox" id="easeOfUse" name="features" value="Ease Of Use">
                 <label for="easeOfUse">Ease of Use</label>
               </div>
               <div>
@@ -102,6 +102,8 @@
             <div class="form-control">
               <input type="submit" value="Post Review">
             </div>
+            <input type="hidden" name="timestamp" id="timestamp">
+
         </form>        
        
     </main>
