--- a/project/products.html
+++ b/project/products.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/produts.css">
     <script src="scripts/script.js" defer></script>
+    <script src="scripts/products.js" defer></script>
 </head>
 
 <body>
@@ -44,6 +45,35 @@
 
     <main>
         <div id="product-title">
+            <h1>Products</h1>
+        </div>
+        <div class="container" id="product-container">
+            <!-- Cards will be dynamically inserted here -->
+        </div>
+
+
+        <!-- Product Cards Container -->
+<div class="container" id="product-container"></div>
+
+<!-- Modal -->
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2 id="modal-title"></h2>
+    <p id="modal-description"></p>
+  </div>
+</div>
+
+<!-- Add some basic styles for the modal -->
+<style>
+  .modal { display: none; position: fixed; z-index: 1; padding-top: 100px; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.4); }
+  .modal-content { background-color: #fff; margin: auto; padding: 20px; border: 1px solid #888; width: 80%; }
+  .close { color: #aaa; float: right; font-size: 28px; font-weight: bold; cursor: pointer; }
+  .close:hover, .close:focus { color: black; text-decoration: none; cursor: pointer; }
+</style>
+
+        
+        <!-- <div id="product-title">
             <h1>Products</h1>
         </div>
         <div class="container">
@@ -118,7 +148,7 @@
                 </p>
                 <p class="price">₦7,500.00</p>
             </div>
-        </div>
+        </div> -->
 
     </main>
 
