--- a/project/products.html
+++ b/project/products.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD231 - Web Frontend Development I - Quadri Kolawole</title>
-    <meta name="description" content="Home page">
+    <meta name="description" content="Products page">
     <meta name="author" content="Quadri Kolawole">
-    <meta property="og:title" content="Home page">
+    <meta property="og:title" content="Products page">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Agricultural product Sales website Home page">
+    <meta property="og:description" content="Agricultural product Sales website Products page">
     <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
-    <meta property="og:image" content="https://adiquatech.github.io/wdd231/chamber/images/web-og.webp">
+    <meta property="og:image" content="https://adiquatech.github.io/wdd231/project/images/product-page">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Verdana&display=swap" rel="stylesheet">
