--- a/project/products.html
+++ b/project/products.html
@@ -9,8 +9,8 @@
     <meta property="og:title" content="Products page">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Agricultural product Sales website Products page">
-    <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
-    <meta property="og:image" content="https://adiquatech.github.io/wdd231/project/images/product-page">
+    <meta property="og:url" content="https://adiquatech.github.io/wdd231/project/products.html">
+    <meta property="og:image" content="https://adiquatech.github.io/wdd231/project/images/product-page.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Verdana&display=swap" rel="stylesheet">
