--- a/test/activities.html
+++ b/test/activities.html
@@ -14,7 +14,7 @@
 <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" href="styles/normalize.css">
 <link rel="stylesheet" href="styles/style.css">
-<link rel="stylesheet" href="styles/home.css">
+<link rel="stylesheet" href="styles/activities.css">
 <script src="scripts/weather.js" defer></script>
 <script src="scripts/script.js" defer></script> 
 <script src="scripts/hairMaterials.js" defer></script> 
@@ -46,20 +46,6 @@
 
         </section>
 
-
-
-        <section class="john">
-            <img class="Gabriel-img" src="images/barbing_activity.jpg" alt="Mr John">
-            <h2>Mr John</h2>
-        </section>
-        <section class="msg2">
-            <h2>Our Activities</h2>
-            <p>
-                We are responsible for how beautiful you look. You can trust us above all other salons you've visited. We are experts
-                in dreadlocks, Ghana weaving, braiding of all kinds, hair pampering, curling, coloring, and styling. We can also give you a nice cute haircut.
-                Check in for your next hair-do by booking ahead.
-            </p>
-        </section>
     </main>
 
     <footer>
