--- a/project/products.html
+++ b/project/products.html
@@ -46,15 +46,17 @@
     <main>
 
         <!-- Product Cards Container -->
-        <div class="container" id="product-container"></div>
+        <div class="container" id="product-container">
+            
+        </div>
 
         <!-- Modal -->
         <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2 id="modal-title"></h2>
-            <p id="modal-description"></p>
-        </div>
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2 id="modal-title"></h2>
+                <p id="modal-description"></p>
+            </div>
         </div>
     </main>
 
