--- a/test/activities.html
+++ b/test/activities.html
@@ -17,7 +17,8 @@
 <link rel="stylesheet" href="styles/activities.css">
 <script src="scripts/weather.js" defer></script>
 <script src="scripts/script.js" defer></script> 
-<script src="scripts/hairMaterials.js" defer></script> 
+<!-- <script src="scripts/hairMaterials.js" defer></script>  -->
+<script src="scripts/activities.js" defer></script> 
 </head>
 <body>
 <body>
@@ -45,6 +46,14 @@
         <section id="hair-materials-container">
 
         </section>
+
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2 id="modal-title"></h2>
+                <p id="modal-description"></p>
+            </div>
+        </div>
 
     </main>
 
