--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -71,32 +71,32 @@
       <section id="discover-site">
 
         <div class="site-container">
-          <img src="images/directory/agodi-gardens.webp" alt="agodi-gardens image"  loading="lazy">
+          <img src="images/directory/agodi-gardens.webp" alt="agodi-gardens image"  loading="lazy" width="300" height="150">
           <h2>Agodi Gardens Ibadan</h2>
         </div>
 
         <div class="site-container">
-          <img src="images/directory/bowers-tower.webp" alt="bowers tower image" loading="lazy">
+          <img src="images/directory/bowers-tower.webp" alt="bowers tower image" loading="lazy" width="300" height="198">
           <h2>Bowers Tower Ibadan</h2>
         </div>
 
         <div class="site-container">
-          <img src="images/directory/cocoa_house.webp" alt="cocoa house image" loading="lazy">
+          <img src="images/directory/cocoa_house.webp" alt="cocoa house image" loading="lazy" width="300" height="199">
           <h2>cocoa House Ibadan</h2>
         </div>
 
         <div class="site-container">
-          <img src="images/directory/iart.webp" alt="Institute of Agricultural Research Training image" loading="lazy">
+          <img src="images/directory/iart.webp" alt="Institute of Agricultural Research Training image" loading="lazy" width="300" height="225">
           <h2>Institute of Agricultural Research Training Ibadan</h2>
         </div>
 
         <div class="site-container">
-          <img src="images/directory/iita.webp" alt="International Institute of Tropical Agriculture image" loading="lazy">
+          <img src="images/directory/iita.webp" alt="International Institute of Tropical Agriculture image" loading="lazy" width="300" height="168">
           <h2>International Institute of Tropical Agriculture Ibadan</h2>
         </div>
 
         <div class="site-container">
-          <img src="images/directory/mapo-hall1.webp" alt="Mapo Hall image" loading="lazy">
+          <img src="images/directory/mapo-hall1.webp" alt="Mapo Hall image" loading="lazy" width="300" height="199">
           <h2>Mapo Hall Ibadan</h2>
         </div>
         
