--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <section class="autor">
-            <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa" loading="lazy">
+            <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa" width="50" height="47" loading="lazy" >
             <h1 class="name">Quadri K. Adisa</h1>
             <p>Chamber of Commerce</p>
             <button id="hamburger">&#9776;</button>
